Fixed task list being aligned vertically

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,4 +1,4 @@
-.table {
+.table .task-list {
   overflow: scroll;
 }
 table {
